add go vet with directory level go list (#1)

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -14,3 +14,8 @@
     description: Lint Cloudformation templates.
     entry: lint-cf.sh
     language: script
+-   id: go-vet
+    name: go-vet
+    description: Run go vet across all directories
+    entry: go-vet.sh
+    language: script
