--- a/hooks.yaml
+++ b/hooks.yaml
@@ -13,4 +13,8 @@
     name: lint-cf
     description: Lint Cloudformation templates.
     entry: lint-cf.sh
-
+-   id: go-vet
+    name: go-vet
+    description: Run go vet across all directories
+    entry: go-vet.sh
+    language: script
