fix: Show warnings for cfn-lint

--- a/hooks.yaml
+++ b/hooks.yaml
@@ -13,6 +13,7 @@
     name: lint-cf
     description: Lint Cloudformation templates.
     entry: lint-cf.sh
+    verbose: true
 -   id: go-vet
     name: go-vet
     description: Run go vet across all directories
