fix: Use newer pre-commit hook config for verbose

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -14,6 +14,7 @@
     description: Lint Cloudformation templates.
     entry: lint-cf.sh
     language: script
+    verbose: true
 -   id: go-vet
     name: go-vet
     description: Run go vet across all directories
